# legate-vs-dask

./: README.md  cpu-gpu-legate.py  downstream-dask.py  downstream-legate.py  hello-dask.py  memory-legate.py  repartition-dask.py  repartition-legate.py  task-placement-dask.py  task-placement-legate.py
dask/: cpu-gpu.py  memory.py  partitioning.py  task-placement.py  tasking.py  toplevel.py
legate/: cpu-gpu.py  downstream.py  memory.py  partitioning.py  repartition.py  task-placement.py  tasking.py  toplevel.py  view.py
nccl-interop/: .gitignore  CMakeLists.txt  build.sh  test_nccl.cu
